# tm-spec

./: .gitignore  CHANGELOG.md  CITATION.cff  CONTRIBUTING.md  README.md  SPECIFICATION.md  pyproject.toml
.github/workflows/: release.yml  tests.yml
LICENSES/: MIT.txt
docs/: 0.1.json  0.2.json  README.md  design-decisions.md  gate-registry.md  index.md  landscape.md  lit-review.md  standards-alignment.md
docs/specification/: v0.1.md  v0.2.md  v0.3.md
examples/: README.md  mack_vfe_neb.tm.yaml  nomad_pyrite_singlepoint.tm.yaml  nomad_relax_example.tm.yaml  preflight_example.tm.yaml  pyr_smoke.tm.yaml  w1_grotthuss_aimd.tm.yaml  w2_metad.tm.yaml  w2_mlip_benchmark.tm.yaml  w2_us_pmf.tm.yaml
schemas/: README.md
src/tm_spec/: __init__.py  cli.py  extract.py  lint.py  merge.py  sanity_fill.py  validator.py
src/tm_spec/exporters/: __init__.py  nomad.py
src/tm_spec/importers/: __init__.py  magndata.py  mp.py  nomad.py  optimade.py
src/tm_spec/schemas/: 0.3.json
tests/: README.md  conftest.py  test_cli.py  test_examples_validate.py  test_extract.py  test_lint.py  test_load_doc.py  test_magndata_import.py  test_merge.py  test_mp_import.py  test_nomad_export.py  test_nomad_import.py  test_optimade_import.py  test_optimade_merge_cli.py  test_sanity_fill.py  test_schema_self.py  test_validator_rules.py  test_versioning.py
tests/fixtures/: fixture_neb_pilot.tm.yaml  fixture_neb_pilot_drift.tm.yaml
tests/fixtures/neb_json/: canonical_result.json  canonical_result_failures.json
tests/fixtures/nomad/: mlip_relax_archive.json  pyrite_singlepoint_archive.json  relax_archive.json
tests/fixtures/scripts/: fixture_neb_qe.py  fixture_neb_qe_drift.py
tests/fixtures/xyz/: relaxed_pristine.xyz  relaxed_short_FeS.xyz
